Results from Quast quality evaluation of assembly using reference genome

--- a/results/assembly_eval_quast/report.tex
+++ b/results/assembly_eval_quast/report.tex
@@ -21,12 +21,41 @@ Total length ($\geq$ 50000 bp) & 2982128 \\ \hline
 \# contigs & 9 \\ \hline
 Largest contig & 2775620 \\ \hline
 Total length & 3154995 \\ \hline
+Reference length & 2919198 \\ \hline
 GC (\%) & 37.75 \\ \hline
+Reference GC (\%) & 37.88 \\ \hline
 N50 & 2775620 \\ \hline
+NG50 & 2775620 \\ \hline
 N75 & 2775620 \\ \hline
+NG75 & 2775620 \\ \hline
 L50 & 1 \\ \hline
+LG50 & 1 \\ \hline
 L75 & 1 \\ \hline
+LG75 & 1 \\ \hline
+\# misassemblies & 190 \\ \hline
+\# misassembled contigs & 1 \\ \hline
+Misassembled contigs length & 2775620 \\ \hline
+\# local misassemblies & 36 \\ \hline
+\# scaffold gap ext. mis. & 0 \\ \hline
+\# scaffold gap loc. mis. & 0 \\ \hline
+\# unaligned mis. contigs & 4 \\ \hline
+\# unaligned contigs & 3 + 6 part \\ \hline
+Unaligned length & 557350 \\ \hline
+Genome fraction (\%) & 85.051 \\ \hline
+Duplication ratio & 1.046 \\ \hline
 \# N's per 100 kbp & 0.00 \\ \hline
+\# mismatches per 100 kbp & 392.94 \\ \hline
+\# indels per 100 kbp & 19.01 \\ \hline
+Largest alignment & 115726 \\ \hline
+Total aligned length & 2592243 \\ \hline
+NA50 & 24553 \\ \hline
+NGA50 & 30127 \\ \hline
+NA75 & 4951 \\ \hline
+NGA75 & 10362 \\ \hline
+LA50 & 32 \\ \hline
+LGA50 & 27 \\ \hline
+LA75 & 88 \\ \hline
+LGA75 & 66 \\ \hline
 \end{tabular}
 \end{center}
 \end{table}
